# mailrs

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CI-SETUP.md  CLAUDE.md  Cargo.toml  DEPLOY.md  DEPS_AUDIT.md  Dockerfile  Dockerfile.pg  PERFORMANCE.md  README.md  REFACTOR-V2-v0.1-finding.md  REFACTOR-V2-v0.2-cement-audit.md  REFACTOR-V2-v0.3-metrics.md  REFACTOR-V2-v0.4-log-audit.md  REFACTOR-V2-v0.5-api-drift.md  REFACTOR-V2-v0.6-security.md  REFACTOR-V2-v6-ckpt4-security.md  REFACTOR-V2-v6-ckpt5-coverage.md  REFACTOR-V2-v8-baseline.md  REFACTOR-V2-v8-ckpt0-fixtures.md  REFACTOR-V2-v8-ckpt0.9-tls-config.md  REFACTOR-V2-v8-ckpt1-mail-builder.md  REFACTOR-V2-v8-ckpt2-mail-builder-hardening.md  REFACTOR-V2-v8-ckpt3-mail-builder-prod-swap.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice1.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice2.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice3.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice4-2.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice4-3.md  REFACTOR-V2-v8-ckpt4-sieve-core-slice4.md  REFACTOR-V2-v8-ckpt5-sieve-core-slice1-imap4flags.md  REFACTOR-V2-v8-ckpt5-sieve-core-slice2-envelope.md  REFACTOR-V2-v8-ckpt5-sieve-core-slice3-require-strict.md  REFACTOR-V2-v8-ckpt5-sieve-core-slice4-subaddress.md  REFACTOR-V2-v8-session-summary.md  REFACTOR-V2.md  REFACTOR-V3.md  (+7 more)
bench-harness/rust-runner/: Cargo.toml
bench-harness/rust-runner/src/: dkim.rs  ical.rs  mime.rs  rfc5322.rs  spf.rs
crates/acme/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/acme/src/: lib.rs
crates/alias-store/: Cargo.toml
crates/alias-store-net/: Cargo.toml
crates/alias-store-net/src/: lib.rs
crates/alias-store/src/: lib.rs
crates/arc/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/arc/benches/: arc.rs
crates/arc/fuzz/: Cargo.toml
crates/arc/src/: chain.rs  crypto.rs  error.rs  header.rs  lib.rs  resolver.rs  seal.rs  verify.rs
crates/arc/tests/: crypto_roundtrip.rs  perf_gate.rs  seal_roundtrip.rs
crates/arf/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/arf/benches/: arf.rs
crates/arf/fuzz/: Cargo.toml
crates/arf/src/: lib.rs
crates/arf/tests/: perf_gate.rs
crates/attachment-extract/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/attachment-extract/benches/: attachment_extract.rs
crates/attachment-extract/fuzz/: Cargo.toml
crates/attachment-extract/src/: lib.rs
crates/attachment-extract/tests/: perf_gate.rs
crates/auth-guard/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/auth-guard/benches/: guard.rs
crates/auth-guard/src/: lib.rs
crates/auth-guard/tests/: perf_gate.rs
crates/backoff/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/backoff/benches/: backoff.rs  compare_exponential_backoff.rs
crates/backoff/src/: lib.rs
crates/backoff/tests/: perf_gate.rs
crates/bayes/: Cargo.toml  README.md
crates/bayes/src/: classify.rs  lib.rs  tokenize.rs
crates/clamav/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/clamav/benches/: clamav.rs
crates/clamav/src/: lib.rs
crates/clamav/tests/: perf_gate.rs
crates/clean/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/clean/benches/: clean.rs
crates/clean/fuzz/: Cargo.toml
crates/clean/src/: html.rs  lib.rs  quote.rs  sender.rs
crates/clean/tests/: perf_gate.rs
crates/core/: Cargo.toml
crates/core-api/: Cargo.toml
crates/core-api/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/core-sidestate/: Cargo.toml
crates/core-sidestate/src/: lib.rs
crates/core-sync/: Cargo.toml
crates/core-sync/src/: lib.rs  main.rs
crates/core-sync/tests/: roundtrip.rs
crates/core/src/: event_bus.rs  ldap_auth.rs  lib.rs  spool.rs  users.rs
crates/dav/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dav/benches/: dav.rs  handlers.rs
crates/dav/fuzz/: Cargo.toml
crates/dav/src/: caldav.rs  carddav.rs  error.rs  fixtures.rs  lib.rs  parse.rs  principal.rs  store.rs  types.rs  xml.rs
crates/dav/tests/: caldav_collections.rs  caldav_resource.rs  carddav_collections.rs  carddav_resource.rs  perf_gate.rs  principal.rs  store_error_propagation.rs
crates/delivery-executor/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/delivery-executor/benches/: delivery_executor.rs
crates/delivery-executor/src/: lib.rs
crates/delivery-executor/tests/: perf_gate.rs
crates/dkim/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dkim/benches/: compare_mail_auth.rs  dkim.rs
crates/dkim/fuzz/: Cargo.toml
crates/dkim/src/: canon.rs  crypto.rs  error.rs  header.rs  headers.rs  lib.rs  resolver.rs  sign.rs  verifier.rs
crates/dkim/tests/: multi_sig.rs  perf_gate.rs  sign_roundtrip.rs
crates/dmarc/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dmarc/benches/: report.rs
crates/dmarc/fuzz/: Cargo.toml
crates/dmarc/src/: align.rs  eval.rs  lib.rs  policy.rs
crates/dmarc/tests/: perf_gate.rs
crates/dns/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dns/src/: lib.rs
crates/dnsbl/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/dnsbl/benches/: dnsbl.rs
crates/dnsbl/src/: lib.rs
crates/dnsbl/tests/: perf_gate.rs
crates/fastcore/: Cargo.toml
crates/fastcore/src/: acme_task.rs  aof_compact.rs  backfill_decode.rs  bayes_train.rs  bounce.rs  importance.rs  junk_ttl.rs  lib.rs  live_sync.rs  main.rs  managesieve.rs  pop3.rs  sender_sts.rs  sieve_apply.rs  spool_drain.rs  tlsrpt.rs
crates/ical/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
crates/ical/benches/: compare_icalendar.rs  parse.rs
crates/ical/examples/: parse_invite.rs
crates/ical/fuzz/: Cargo.toml
crates/ical/src/: lib.rs  parse.rs  semantics.rs  serialize.rs  (+2 more)
crates/imap-codec/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/imap-format/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/imap-proto/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.ja.md  README.md  README.zh-CN.md
crates/inbound/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
crates/intelligence/: BUDGETS.md  CHANGELOG.md  Cargo.toml  README.md
(+1593 files in other folders)
