[workspace.package]
version = "1.7.92"

[workspace]
resolver = "2"
members = [
    "crates/smtp-proto",
    "crates/storage-maildir",
    "crates/smtp-client",
    "crates/outbound-queue",
    "crates/mailbox",
    "crates/imap-proto",
    "crates/ical",
    "crates/intelligence",
    "crates/clean",
    "crates/dmarc",
    "crates/postmaster",
    "crates/shield",
    "crates/jmap",
    "crates/dav",
    "crates/inbound",
    "crates/rate-limit",
    "crates/rfc2047",
    "crates/rfc5322",
    "crates/auth-guard",
    "crates/srs",
    "crates/rfc2231",
    "crates/webhook-signature",
    "crates/dnsbl",
    "crates/clamav",
    "crates/backoff",
    "crates/tls-reload",
    "crates/acme",
    "crates/spf",
    "crates/dkim",
    "crates/mime",
    "crates/dns",
    "crates/arc",
    "crates/mta-sts",
    "crates/tls-rpt",
    "crates/smtp-codec",
    "crates/imap-codec",
    "crates/imap-format",
    "crates/attachment-extract",
    "crates/sieve",
    "crates/sieve-core",
    "crates/delivery-executor",
    "crates/arf",
    "crates/mail-builder",
    "crates/server",
]

[workspace.dependencies]
# Async runtime + protocols.
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Storage + cache.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time + DNS — used in 5+ crates each, pin centrally so a future bump
# rolls through the workspace in one commit.
chrono = "0.4"
hickory-resolver = "0.26"

# Bench harness — every published crate uses the same criterion config
# (no default features, cargo_bench_support only). Pinning here makes
# upgrades atomic.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny" }

# Performance-first release profile.
#
# mailrs's positioning: "modern Rust implementation of legacy email
# protocols, performance-first". Default cargo release tunes for compile
# time; we trade compile time for runtime quality.
#
# - lto = "fat": linker inlines + DCE's across crate boundaries,
#   including across mailrs-* library boundaries. Non-negotiable for an
#   SMTP/IMAP server where every µs in the handler matters.
# - codegen-units = 1: single CGU per crate, optimizer sees every
#   callee. Costs build time, recovers in binary quality.
# - panic = "abort": no unwinding tables. Server panics terminate the
#   process anyway (supervisor restarts). ~15-30% smaller binary,
#   slightly faster Result-heavy hot paths.
# - strip = "symbols": lean deploy binary.
# - overflow-checks = false: release default, made explicit to prevent
#   accidental flip.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
incremental = false

# Perf-investigation profile: same optimization as release, keeps line
# tables so flamegraphs / perf record / Instruments can attribute
# samples. Use with `cargo build --profile release-debug`.
[profile.release-debug]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Vanilla release profile — defaults restored. Exists solely so we can
# compare the perf-first profile against an honest baseline (see
# `crates/server/benches/smtp_load.rs` and PERFORMANCE.md row for commit
# 9f21e0b). Not for deploy: produces the larger / slower-Result-path
# binary the perf-first profile was introduced to avoid.
#
# Use with `cargo build --profile release-vanilla -p mailrs-server`.
[profile.release-vanilla]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"
