[workspace.package]
version = "0.0.0"

[workspace]
resolver = "2"
members = [
    "crates/smtp-proto",
    "crates/storage-maildir",
    "crates/message-store",
    "crates/receiver",
    "crates/core",
    "crates/smtp-client",
    "crates/outbound-queue",
    "crates/mailbox",
    "crates/imap-proto",
    "crates/ical",
    "crates/intelligence",
    "crates/clean",
    "crates/dmarc",
    "crates/postmaster",
    "crates/shield",
    "crates/jmap",
    "crates/dav",
    "crates/inbound",
    "crates/rate-limit",
    "crates/rfc2047",
    "crates/rfc5322",
    "crates/auth-guard",
    "crates/srs",
    "crates/rfc2231",
    "crates/webhook-signature",
    "crates/dnsbl",
    "crates/clamav",
    "crates/backoff",
    "crates/tls-reload",
    "crates/acme",
    "crates/spf",
    "crates/dkim",
    "crates/mime",
    "crates/dns",
    "crates/arc",
    "crates/mta-sts",
    "crates/tls-rpt",
    "crates/smtp-codec",
    "crates/imap-codec",
    "crates/imap-format",
    "crates/attachment-extract",
    "crates/sieve",
    "crates/sieve-core",
    "crates/delivery-executor",
    "crates/arf",
    "crates/mail-builder",
    "crates/server",
]

[workspace.dependencies]
# Async runtime + protocols.
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Storage + cache.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono"] }
# spg-sqlx — sqlx 0.8 Database driver over spg-embedded (in-process SQL
# engine, PG dialect). Behind the per-crate `spg` feature: stones keep
# PG as the default backend; the server binary flips the workspace to
# the embedded backend at build time. See .claude/rfcs/20260610-spg-embedded-cutover.md
spg-sqlx = "7.35"
spg-embedded = "7.35"
# kevy-embedded — in-process RESP-compatible KV store with AOF + snapshot
# persistence + native pub/sub bus. Zero network hop, ~10× faster than
# the network kevy/redis container path. The only kvdb backend mailrs
# ships with after Phase C (v1.7.95+); the `redis` crate dep is gone.
kevy-embedded = "1.2"
# kevy-client — synchronous RESP network client for a shared kevy-server.
# Used only when MAILRS_KEVY_URL is set (receiver-split topology): the
# anti subsystems (greylist / rate / auth-guard) read+write shared state
# over the network instead of the in-process embedded Store. Blocking
# `&mut self` client → wrapped in spawn_blocking. dogfood, same org.
kevy-client = "1.9"

# Serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing — shared by the server (web/imap/pop3/mcp auth) and
# mailrs-core (the UserStore credential file). password-hash + rand_core
# pinned to older majors — argon2 0.5.x (latest) hard-deps password-hash
# 0.5, and rsa 0.9.x (latest) hard-deps rand_core 0.6. Unpin when argon2
# 0.6 / rsa 0.10 publish. See rust-deps-and-warnings.md §6.
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }

# Time + DNS — used in 5+ crates each, pin centrally so a future bump
# rolls through the workspace in one commit.
chrono = "0.4"
hickory-resolver = "0.26"

# IP / CIDR parsing — used by greylist local-lists (Phase 2) for IP-range
# rules. ipnet handles both v4 and v6 with a single IpNet enum.
ipnet = "2"

# Bench harness — every published crate uses the same criterion config
# (no default features, cargo_bench_support only). Pinning here makes
# upgrades atomic.
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny" }

# Performance-first release profile.
#
# mailrs's positioning: "modern Rust implementation of legacy email
# protocols, performance-first". Default cargo release tunes for compile
# time; we trade compile time for runtime quality.
#
# - lto = "fat": linker inlines + DCE's across crate boundaries,
#   including across mailrs-* library boundaries. Non-negotiable for an
#   SMTP/IMAP server where every µs in the handler matters.
# - codegen-units = 1: single CGU per crate, optimizer sees every
#   callee. Costs build time, recovers in binary quality.
# - panic = "abort": no unwinding tables. Server panics terminate the
#   process anyway (supervisor restarts). ~15-30% smaller binary,
#   slightly faster Result-heavy hot paths.
# - strip = "symbols": lean deploy binary.
# - overflow-checks = false: release default, made explicit to prevent
#   accidental flip.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
incremental = false

# Perf-investigation profile: same optimization as release, keeps line
# tables so flamegraphs / perf record / Instruments can attribute
# samples. Use with `cargo build --profile release-debug`.
[profile.release-debug]
inherits = "release"
debug = "line-tables-only"
strip = "none"

# Vanilla release profile — defaults restored. Exists solely so we can
# compare the perf-first profile against an honest baseline (see
# `crates/server/benches/smtp_load.rs` and PERFORMANCE.md row for commit
# 9f21e0b). Not for deploy: produces the larger / slower-Result-path
# binary the perf-first profile was introduced to avoid.
#
# Use with `cargo build --profile release-vanilla -p mailrs-server`.
[profile.release-vanilla]
inherits = "release"
lto = false
codegen-units = 16
panic = "unwind"

