[package]
name = "mailrs-arc"
version = "2.0.0"
edition = "2024"
description = "RFC 8617 Authenticated Received Chain (ARC) — header parsing, chain extraction, and signature verification. ARC extends DKIM/SPF/DMARC across forwarders by chaining per-hop authentication results inside cryptographically-sealed header sets. Pairs with mailrs-dkim for canonicalization + RSA verify, mailrs-spf / mailrs-dmarc for the auth-results that ARC carries forward."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/mailrs"
homepage = "https://github.com/goliajp/mailrs"
documentation = "https://docs.rs/mailrs-arc"
authors = ["GOLIA K.K."]
keywords = ["arc", "rfc8617", "email", "auth", "smtp"]
categories = ["email", "cryptography", "network-programming"]
readme = "README.md"

[lints]
workspace = true

[features]
default = ["hickory"]
# Re-export the hickory-backed resolver adapter for DNS-based public-key
# lookup. Disable to bring your own DNS layer via the `ArcResolver` trait.
hickory = ["mailrs-dkim/hickory"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
sha2 = { version = "0.10", features = ["oid"] }
# Reuse DKIM canonicalization + crypto (AMS/AS share the algorithms).
mailrs-dkim = { path = "../dkim", version = "2", default-features = false }
# Direct dep so cargo doc resolves ArcSigningKey<'_> types in this crate.
rsa = "0.9"
ed25519-dalek = "2"
# Inline-short-string for d= / s= / i= tags — see mailrs-dkim 2.0.
compact_str = "0.9"

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true }
# rsa 0.9 + rand 0.8 keep rand_core 0.6 compatible.
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
base64 = "0.22"
sha2 = { version = "0.10", features = ["oid"] }
async-trait = "0.1"

[[bench]]
name = "arc"
harness = false
