[package]
name = "mailrs-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Shared session infrastructure for the mailrs server + receiver: the SmtpEvent bus and (incrementally) the cross-protocol session primitives (auth store, TLS state, LDAP config). Free of spg / kevy so both the stateful core and the stateless receiver can depend on it. Internal until the split stabilises."
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync"] }

# UserStore: argon2 password verification + users.toml parsing.
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true }
toml = "1"

# LdapConfig: optional LDAP auth fallback (used by smtp/imap/pop3/managesieve).
ldap3 = { version = "0.12.1", default-features = false, features = ["tls-rustls-ring"] }
tracing = "0.1"

# SpoolEnvelope: base64-framed envelope header on spool files (receiver/core split).
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
