[package]
name = "mailrs-delivery-executor"
version = "1.1.1"
edition = "2024"
description = "Group-commit delivery executor on top of mailrs-maildir 1.2's deliver_batch. Accumulates per-path delivery requests from concurrent async tasks (SMTP / LMTP / IMAP APPEND sessions) and flushes each path's batch via a single fsync, with optional pipelined in-flight flushes (max_concurrent_flushes=2 default) to hide disk wait behind batch collection. Caller awaits a oneshot::Receiver for per-message confirmation. Default tuning: max_batch=64, max_wait=10ms, max_concurrent_flushes=2."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/goliajp/mailrs"
homepage = "https://github.com/goliajp/mailrs"
documentation = "https://docs.rs/mailrs-delivery-executor"
authors = ["GOLIA K.K."]
keywords = ["maildir", "smtp", "delivery", "group-commit", "fsync"]
categories = ["email", "filesystem", "asynchronous"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
mailrs-maildir = "1.2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bench]]
name = "delivery_executor"
harness = false
